// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingIndicator Component should render correctly 1`] = `
<RNCSafeAreaView>
  <ActivityIndicator
    animating={true}
    color="#FFC107"
    hidesWhenStopped={true}
    size="large"
    style={
      Object {
        "margin": 13,
      }
    }
  />
</RNCSafeAreaView>
`;

exports[`LoadingIndicator Component should render new color props correctly 1`] = `
<RNCSafeAreaView>
  <ActivityIndicator
    animating={true}
    color="#FFC107"
    hidesWhenStopped={true}
    size="large"
    style={
      Object {
        "margin": 13,
      }
    }
  />
</RNCSafeAreaView>
`;

exports[`LoadingIndicator Component should render new small size props correctly 1`] = `
<RNCSafeAreaView>
  <ActivityIndicator
    animating={true}
    color="#FFC107"
    hidesWhenStopped={true}
    size="small"
    style={
      Object {
        "margin": 13,
      }
    }
  />
</RNCSafeAreaView>
`;
